# OpenRCT2Launcher

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  OpenRCT2Launcher.pro  README.md  appveyor.yml  configuration.cpp  configuration.h  configuration.ui  configuration_data.h  installer.iss  installer.nsi  languages.qrc  main.cpp  mainwindow.cpp  mainwindow.ui  platform.h  qt5-mac.sh  updater.cpp  updater.h
.github/workflows/: ci.yml
Icon/: OpenRCT2.icns  OpenRCT2Launcher.rc
Languages/: cs-CZ.ts  de-DE.ts  en-GB.ts  en-US.ts  es-ES.ts  fi-FI.ts  fr-FR.ts  hu-HU.ts  it-IT.ts  ja-JP.ts  ko-KR.ts  nl-NL.ts  pl-PL.ts  pt-BR.ts  ru-RU.ts  sv-SE.ts  zh-CN.ts  zh-TW.ts
OpenRCT2Launcher/: OpenRCT2Launcher.pro  configuration.cpp  configuration.h  configuration.ui  configuration_data.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  platform.h  resources.qrc  updater.cpp  updater.h
OpenRCT2Launcher/archives/: gzipreadfilter.h  tarextractor.cpp  tarextractor.h  zipextractor.cpp
archives/: tarextractor.cpp  zipextractor.h
resources/: resources.qrc
src/: configuration.ui  main.cpp  mainwindow.h  mainwindow.ui  platform.h  updater.cpp  updater.h
src/archives/: gzipreadfilter.cpp  zipextractor.cpp
